--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,91 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.container {
+
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
+  background: #f5f5f5;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.15);
+
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  padding: 32px 82px;
+  
+
+}
+
+.header h1 {
+  position: absolute;
+  width: 200px;
+  height: 50px;
+  left: 100px;
+
+}
+
+.genre {
+
+  width: 100px;
+  height: 30px;
+  
+  align-items: center;
+  margin: 15px;
+  font-family: Poppins;
+  font-weight: 500;
+  color: #613d2b;
+  border: 2px solid #613d2b;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.movies {
+
+  width: 100px;
+  height: 30px;
+  font-family: Poppins;
+  font-weight: 500;
+  color: white;
+  background: #613d2b;
+  border-radius: 5px;
+   
+}
+
+.table {
+  width: 300px;
+  margin: auto;
+  border: 2px solid #828282;
+  margin-bottom: 50px;
+}
+
+.table tr th {
+  padding: 12px;
+  background-color: #e5e5e5;
+}
+
+/* .table tr th:nth-child(7) {
+  text-align: center;
+} */
+
+.table tr td {
+  padding: 12px;
+}
+
+.btn {
+  margin-left: 5px;
+  border-radius: 5px;
+  cursor: pointer;
 }
